[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydacefit"
version = "1.0.0"
description = "Surrogate Toolbox for Python"
readme = "README.rst"
license = { text = "Apache License 2.0" }
authors = [{ name = "Julian Blank", email = "blankjul@egr.msu.edu" }]
keywords = ["metamodel", "surrogate", "response surface"]
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
# matplotlib is only needed to run the plotting example (src/pydacefit/usage.py).
examples = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/msu-coinlab/pydacefit"

[tool.setuptools.packages.find]
# src layout: packages live under src/, so discovery is rooted there. This also
# keeps tests/, docs/, and benchmark/ out of the distribution by construction.
where = ["src"]

[tool.ruff]
line-length = 120
# docs/ is Sphinx build infrastructure (conf.py, build helpers) — not part of
# the package or test surface, so keep it out of the quality gate.
extend-exclude = ["docs"]

[tool.ruff.lint]
# One-line-per-file docstring doctrine: enable pydocstyle (D) but drop the
# per-symbol mandates so only the module docstring is required, not every
# class/method/function. Curate this select set per the pyclawd-adopt skill.
select = ["E", "F", "I", "D"]
ignore = ["D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
# The repo's existing docstrings (e.g. the DACE class) are numpy-style.
convention = "numpy"

[tool.mypy]
files = ["src/pydacefit"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (excluded from the default tier)",
    "integration: tests needing live services",
    "golden: behavior-oracle snapshots (run via `pyclawd golden`)",
]
